--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   fess01:
-    image: ghcr.io/codelibs/fess:13.11.1
+    image: public.ecr.aws/c4k4h8g1/inayuky/fess:13.11.1
     container_name: fess01
     environment:
       - "ES_HTTP_URL=http://es01:9200"
