--- a/compose/docker-compose.standalone.yml
+++ b/compose/docker-compose.standalone.yml
@@ -11,6 +11,7 @@ services:
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
       - "FESS_DICTIONARY_PATH=/usr/share/elasticsearch/config/dictionary"
+    restart: always
     ulimits:
       memlock:
         soft: -1
