--- a/compose/docker-compose.standalone.yml
+++ b/compose/docker-compose.standalone.yml
@@ -9,8 +9,9 @@ services:
       - cluster.initial_master_nodes=es01
       - cluster.name=fess-es
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "FESS_DICTIONARY_PATH=/usr/share/elasticsearch/config/dictionary"
+    mem_limit: 1.5g
     restart: always
     ulimits:
       memlock:
