--- a/compose/docker-compose.standalone.yml
+++ b/compose/docker-compose.standalone.yml
@@ -28,10 +28,11 @@ services:
     networks:
       - esnet
     logging:
-      driver: "json-file"
+      driver: awslogs # CloudWatchLogsへ保存。CloudWatchLogsへの書き込みポリシーをもったIAMロールが必要。
       options:
-        max-size: "10m"
-        max-file: "5"
+        awslogs-region: ap-northeast-1
+        awslogs-group: qiita-search
+        tag: "{{.Name}}" # Log stream (コンテナ名としている)
 
 volumes:
   esdata01:
