--- a/compose/docker-compose.standalone.yml
+++ b/compose/docker-compose.standalone.yml
@@ -11,7 +11,8 @@ services:
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - "FESS_DICTIONARY_PATH=/usr/share/elasticsearch/config/dictionary"
-    mem_limit: 1.5g
+      - "TZ=Asia/Tokyo"
+      mem_limit: 1.5g
     restart: always
     ulimits:
       memlock:
